<resources>
    <string name="app_name">wsr_Iadrikhinskii</string>
    <string name="logo">WorldSkills Bank</string>
    <string name="banks">Отделения и банкоматы</string>
    <string name="money">Курсы валют</string>
    <string name="button">ВОЙТИ</string>
    <string name="cur_usd">USD</string>
    <string name="cur_eur">EUR</string>
    <string name="title_activity_currency">Currency</string>
    <!-- Strings related to login -->
    <string name="autorization">Авторизация</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="title_activity_setting">Настройки</string>
    <string name="hint_text">Search people and places</string>

    <string name="tab_1">Главная</string>
    <string name="tab_2">Платежи</string>
    <string name="tab_3">История</string>
    <string name="tab_4">Диалоги</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>